# constraint_pcg

./: pcg.py  pyproject.toml  solver.py
inputs/simple_knots/: config.json
inputs/simple_paths/: better_config.json  config.json
inputs/simple_pokemon/: better_config.json  config.json
