[tool.poetry]
name = "constraint_pcg"
version = "0.1.0"
description = ""
authors = ["Jediah Katz <jediahkatz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ortools = "^9.2.9972"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
